--- a/1.fundamentos/A.aspectos-fundamentais-da-mecanica-quantica.ipynb
+++ b/1.fundamentos/A.aspectos-fundamentais-da-mecanica-quantica.ipynb
@@ -329,13 +329,27 @@
    "id": "e8f9b4fb",
    "metadata": {},
    "source": [
-    ">   **Segundo postulado da mecânica quântica.** Toda quantidade física mensurável $\\mathcal{Q}$ de um sistema quântico possui um operador observável $\\mathbf{\\hat{Q}}$ que atua sobre o espaço de estados do sistema.\n",
+    "A construção do conceito de operador tem grande serventia à teoria quântica, dado que consistem em operações sobre o espaço de estados que podem ser comparadas à valores ($\\mathbf{\\hat{A}} = \\alpha$ é muito bem definido correspondendo ao conceito de autovalor do operador). De maneira que podemos postular que toda medida física pode ser representada como um operador com autovalores reais (impomos também a ortonormalidade entre a base definida pelos seus autovalores por regularidade), de modo que, para espaços de dimensão finita operadores de tal classe especial são chamados hermitianos.\n",
     "\n",
-    "Em dimensão finita, como as que trabalhamos neste repositório, os conceitos de operador observável e operador hermitiano são exatamente iguais.\n",
+    ">   **Segundo postulado da mecânica quântica.** Toda quantidade física mensurável $\\mathcal{Q}$ de um sistema quântico possui um operador hermitiano $\\mathbf{\\hat{Q}}$ que atua sobre o espaço de estados do sistema e os possíveis resultados desta medida correspondem aos autovalores do seu operador associado.\n",
+    ">\n",
+    ">   >   **definição (operador hermitiano).** Um operador linear $\\mathbf{\\hat{A}}$ sobre um dado espaço de estados apresenta hermiticidade, caso:\n",
+    ">   >\n",
+    ">   >   $$\n",
+    ">   >       \\mathbf{\\hat{A}} ^ \\dagger = \\mathbf{\\hat{A}}\\text{,}\n",
+    ">   >   $$\n",
+    ">   >\n",
+    ">   >   sendo assim chamado hermitiano.\n",
     "\n",
-    ">   **Terceiro postulado da mecânica quântica.** Os possíveis resultados de uma medida de uma quantidade física mensurável $\\mathcal{Q}$ são os autovalores do seu operador observável associado.\n",
+    "Para variar um pouco dos exemplos com polarização de fótons (e para tornar o exemplo mais correlato aos cursos tradicionais de mecânica quântica) podemos utilizar a medida do spin (quantidade intrínseca de momento angular sem análogo clássico) de um elétron ao longo de um eixo principal.\n",
     "\n",
-    ">   **Quarto postulado da mecânica quântica.** Imediatamente após a medição de uma quantidade física mensurável $\\mathcal{Q}$, o estado do sistema quântico é projetado sobre o autoespaço correspondente ao autovalor medido.\n"
+    ">   **Exemplo 3.** O valor do spin de um elétron pode ser representada pelo operador $\\mathbf{\\hat{S}}_z = \\hbar (\\left|\\uparrow\\right>\\left<\\uparrow\\right| - \\left|\\downarrow\\right>\\left<\\downarrow\\right|) / 2$.\n",
+    "\n",
+    "Ademais, mesmo a natureza sendo extremamente estranha neste regime, ela ainda apresenta certo limite de regularidade. Ao efetuarmos uma medida num sistema quântico este sempre colapsa a um estado que é coerente com a medida (afinal não faz sentido medirmos um elétron com spin pra cima sendo que ele está ainda com chance de estar com spin para baixo).\n",
+    "\n",
+    ">   **Terceiro postulado da mecânica quântica.** Imediatamente após a medição de uma quantidade física mensurável $\\mathcal{Q}$, o estado do sistema quântico é projetado sobre o autoespaço correspondente ao autovalor medido.\n",
+    "\n",
+    "Esse processo de projeção corresponde apenas a remover todas as componentes que não são coerentes com a medida obtida e renormalizar o vetor de estado.\n"
    ]
   },
   {
@@ -351,12 +365,25 @@
    "id": "24a16db5",
    "metadata": {},
    "source": [
+    "Por fim, o último postulado nos diz como sistemas quânticos evoluem com o passar do tempo. Este postulado corresponde à equação de Schrödinger, mas devemos obtê-la com cuidado pois ela é resultado de uma afirmação ainda mais fundamental.\n",
+    "\n",
+    "Todo processo que se atua de modo a alterar um estado quântico deve ser tal que preserve sua normalização, ou seja, todo processo no regime quântico pode ser representado por um operador que \"gira\", num sentido bem abstrato da palavra, o estado de origem ao estado resultado. Tal classe de operadores que correspondem a tal conceito abstrato de \"rotação\" no espaço de estados é a dos operadores unitários.\n",
+    "\n",
     ">   **Quinto postulado da mecânica quântica.** Para todo sistema quântico isolado, existe um operador $\\mathbf{\\hat{U}}(t)$ unitário tal que, um estado físico $\\left|\\Psi_0\\right>$ do sistema após a passagem de um tempo $t$ estará num estado:\n",
+    ">\n",
     ">   $$\n",
     ">       \\left|\\Psi(t)\\right> = \\mathbf{\\hat{U}}(t)\\left|\\Psi_0\\right>\\text{.}\n",
     ">   $$\n",
     ">\n",
-    ">   >   Por meio deste postulado, utilizando o [teorema de Stones](https://en.wikipedia.org/wiki/Stone%27s_theorem_on_one-parameter_unitary_groups), podemos chegar à célebre *equação de Schrödinger*:\n",
+    ">   >   **definição (operador unitário).** Um operador linear $\\mathbf{\\hat{U}}$ sobre um dado espaço de estados é dito unitário, caso:\n",
+    ">   >\n",
+    ">   >   $$\n",
+    ">   >       \\mathbf{\\hat{A}} ^ \\dagger = \\mathbf{\\hat{A}} ^{-1}\\text{.}\n",
+    ">   >   $$\n",
+    ">\n",
+    ">   o grupo de todos os operadores unitários possui como geradores infinitesimais operadores hermitianos, assim podemos descrever a dinâmica de todo sistema quântico segundo uma equação mestra.\n",
+    ">\n",
+    ">   >   Por meio deste postulado, utilizando o [teorema de Stones](https://en.wikipedia.org/wiki/Stone%27s_theorem_on_one-parameter_unitary_groups), e com pouca álgebra podemos chegar à célebre *equação de Schrödinger*:\n",
     ">   >   $$\n",
     ">   >       \\imath\\hbar\\partial_t\\mathbf{\\hat{U}}(t) = \\mathbf{\\hat{H}}\\text{,}\n",
     ">   >   $$\n",
