--- a/content/1.fundamentos-de-computacao-quantica/1.introducao-a-computacao-quantica.ipynb
+++ b/content/1.fundamentos-de-computacao-quantica/1.introducao-a-computacao-quantica.ipynb
@@ -1,5 +1,43 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "47cd48c2",
+   "metadata": {},
+   "source": [
+    "#   Introdução à computação quântica\n",
+    "\n",
+    ">   Autor: [Carlos Antunis Bonfim da Silva Santos](https://github.com/carlos-antunis-physics/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "196c15d3",
+   "metadata": {},
+   "source": [
+    "\n",
+    "<div align=\"center\">\n",
+    "\n",
+    "![under construction image](../../under-construction.png)\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd63bd90",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "<div align=\"right\">\n",
+    "\n",
+    "[voltar ao sumário](./README.md)\n",
+    "\n",
+    "</div>"
+   ]
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "Julia 1.11.5",
