--- a/content/2.introducao-a-comunicacao-quantica/1.protocolo-BB84.ipynb
+++ b/content/2.introducao-a-comunicacao-quantica/1.protocolo-BB84.ipynb
@@ -1,5 +1,43 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "3e69c28e",
+   "metadata": {},
+   "source": [
+    "#   Protocolo BB84\n",
+    "\n",
+    ">   Autor: [Carlos Antunis Bonfim da Silva Santos](https://github.com/carlos-antunis-physics/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdcbbecd",
+   "metadata": {},
+   "source": [
+    "\n",
+    "<div align=\"center\">\n",
+    "\n",
+    "![under construction image](../../under-construction.png)\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fa5da18",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "<div align=\"right\">\n",
+    "\n",
+    "[voltar ao sumário](./README.md)\n",
+    "\n",
+    "</div>"
+   ]
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "Julia 1.11.5",
