--- a/notebooks/I.fundamentals-of-quantum-computing.ipynb
+++ b/notebooks/I.fundamentals-of-quantum-computing.ipynb
@@ -13,18 +13,56 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ea7270a",
+   "id": "73c236b7",
    "metadata": {},
    "source": [
-    "### 1. Arquétipo clássico de computação"
+    "###     Modelos clássicos de computação"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2899b887",
+   "id": "03c11d40",
    "metadata": {},
    "source": [
-    "### 2. Bits quânticos"
+    "####    Circuitos lógicos clássicos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae3e58b2",
+   "metadata": {},
+   "source": [
+    "###     Modelos quânticos de computação"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "957f8e49",
+   "metadata": {},
+   "source": [
+    "####    Circuitos lógicos quânticos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab871a44",
+   "metadata": {},
+   "source": [
+    "###     Análise de eficiência de algoritmos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c9e7a5c",
+   "metadata": {},
+   "source": [
+    "###\n",
+    "\n",
+    "<div align=\"center\">\n",
+    "\n",
+    "[![under construction image](https://raw.githubusercontent.com/carlos-antunis-physics/carlos-antunis-physics/refs/heads/main/assets/under-construction.png)](#---)\n",
+    "\n",
+    "</div>"
    ]
   },
   {
