--- a/notebooks/V.quantum-error-correction.ipynb
+++ b/notebooks/V.quantum-error-correction.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "db2e46d0",
+   "id": "f092450e",
    "metadata": {},
    "source": [
     "<div align=\"center\">\n",
-    "    <h2>Implementações físicas de portas lógicas quânticas</h2>\n",
+    "    <h2>Correção quântica de erros</h2>\n",
     "    <a href=\"https://github.com/carlos-antunis-physics\">Carlos Antunis Bonfim da Silva Santos</a>\n",
     "</div>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4dd15a9f",
+   "id": "d7d05ba5",
    "metadata": {},
    "source": [
     "###\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3391395",
+   "id": "7ce70f51",
    "metadata": {},
    "source": [
     "###\n",
