--- a/notebooks/VI.fundamentals-of-quantum-and-posquantum-cryptography.ipynb
+++ b/notebooks/VI.fundamentals-of-quantum-and-posquantum-cryptography.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "db2e46d0",
+   "id": "a598bd5e",
    "metadata": {},
    "source": [
     "<div align=\"center\">\n",
-    "    <h2>Implementações físicas de portas lógicas quânticas</h2>\n",
+    "    <h2>Fundamentos de criptografia quântica e pós-quântica</h2>\n",
     "    <a href=\"https://github.com/carlos-antunis-physics\">Carlos Antunis Bonfim da Silva Santos</a>\n",
     "</div>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4dd15a9f",
+   "id": "52144b3b",
    "metadata": {},
    "source": [
     "###\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3391395",
+   "id": "caea771f",
    "metadata": {},
    "source": [
     "###\n",
